Modificado el pie de página

--- a/index.html
+++ b/index.html
@@ -123,31 +123,31 @@
             </form>
         </div>
     </section>
-    <footer class="py-4 bg-indigo-700 flex flex-wrap justify-center lg:justify-around lg:flex-nowrap lg:items-center text-indigo-50">
-        <div>
-            <h3>Información</h3>
-            <ul>
-                <li><a href="productos.html">Tienda</a></li>
-                <li><a href="nosotros.html#distribuidores">Distribuidores</a></li>
-                <li><a href="nosotros.html">Nosotros</a></li>
-                <li><a href="contacto.html">Contacto</a></li>
+    <footer class="h-160 sm:h-60 bg-indigo-700 flex flex-wrap flex-col sm:flex-row justify-start sm:justify-evenly items-center sm:items-start text-indigo-50">
+        <div class="mt-10">
+            <h3 class="font-bold text-2xl">Información</h3>
+            <ul class="mt-4">
+                <li class="mt-2"><a href="productos.html">Tienda</a></li>
+                <li class="mt-2"><a href="nosotros.html#distribuidores">Distribuidores</a></li>
+                <li class="mt-2"><a href="nosotros.html">Nosotros</a></li>
+                <li class="mt-2"><a href="contacto.html">Contacto</a></li>
             </ul>
         </div>
-        <div>
-            <h3>Legales</h3>
-            <ul>
-                <li><a href="faq.html">Preguntas frecuentes</a></li>
-                <li><a href="devoluciones.html">Envíos y devoluciones</a></li>
-                <li><a href="politica.html"></a></li>
-                <li><a href="politica.html#metodospago">Métodos de pago</a></li>
+        <div class="mt-10">
+            <h3 class="font-bold text-2xl">Legales</h3>
+            <ul class="mt-4">
+                <li class="mt-2"><a href="faq.html">Preguntas frecuentes</a></li>
+                <li class="mt-2"><a href="devoluciones.html">Envíos y devoluciones</a></li>
+                <li class="mt-2"><a href="politica.html">Políticas de la tienda</a></li>
+                <li class="mt-2"><a href="politica.html#metodospago">Métodos de pago</a></li>
             </ul>
         </div>
-        <div>
-            <h3>Nuestras redes</h3>
-            <ul>
-                <li><a href="https://www.facebook.com"><img src="img/facebook.png" alt="ícono facebook"></a></li>
-                <li><a href="https://www.x.com"><img src="img/x.png" alt="ícono x"></a></li>
-                <li><a href="https://www.instagram.com"><img src="img/instagram.png" alt="ícono instagram"></a></li>
+        <div class="mt-10">
+            <h3 class="font-bold text-2xl">Nuestras redes</h3>
+            <ul class="mt-4">
+                <li class="mt-2"><a href="https://www.facebook.com"><img src="img/facebook.png" alt="ícono facebook"></a></li>
+                <li class="mt-2"><a href="https://www.x.com"><img src="img/x.png" alt="ícono x"></a></li>
+                <li class="mt-2"><a href="https://www.instagram.com"><img src="img/instagram.png" alt="ícono instagram"></a></li>
             </ul>
         </div>
     </footer>
