--- a/index.html
+++ b/index.html
@@ -3,8 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Bienvenido</title>
+    <title>Crudo Style Clothes</title>
     <link rel="stylesheet" href="css/style.css">
+    <link rel="shortcut icon" href="img/icons/favicon.png" type="image/x-icon">
     <script src="https://cdn.jsdelivr.net/npm/@tailwindcss/browser@4"></script>
 </head>
 <body class="bg-indigo-100">
@@ -13,20 +14,20 @@
     <!--Revisar porqué al agregarle flex y flex-col al section, me soluciona el desplazamiento del div-->
     <section class="bg-[url(img/bg-header.webp)] h-screen w-screen text-indigo-50 flex flex-col bg-cover">
         <header class="py-4 bg-indigo-600 flex flex-wrap justify-center lg:justify-around lg:flex-nowrap lg:items-center">
-            <a class="text-4xl sm:text-6xl lg:text-4xl mb-4 lg:mb-0" href="index.html">CrudoStylesClothes</a>
+            <a class="text-5xl sm:text-6xl lg:text-5xl mb-4 lg:mb-0 bbh-bogle text-indigo-50 ts-text" href="index.html">Crudo<span class="dancing-script-400 text-red-500">StyleClothes</span></a>
             <nav class="w-full lg:w-2/4 flex justify-evenly">
-                <a class="hover:underline underline-offset-6" href="index.html">Inicio</a>
-                <a class="hover:underline underline-offset-6" href="productos.html">Productos</a>
-                <a class="hover:underline underline-offset-6" href="contacto.html">Contacto</a>
-                <a class="hover:underline underline-offset-6" href="nosotros.html">Nosotros</a>
-                <a class="hover:underline underline-offset-6" href="login.html">Login</a>
-                <a class="hover:underline underline-offset-6" href="signup.html">Sign Up</a>
+                <a class="hover:underline underline-offset-6 decoration-2 decoration-red-500" href="index.html">Inicio</a>
+                <a class="hover:underline underline-offset-6 decoration-2 decoration-red-500" href="productos.html">Productos</a>
+                <a class="hover:underline underline-offset-6 decoration-2 decoration-red-500" href="contacto.html">Contacto</a>
+                <a class="hover:underline underline-offset-6 decoration-2 decoration-red-500" href="nosotros.html">Nosotros</a>
+                <a class="hover:underline underline-offset-6 decoration-2 decoration-red-500" href="login.html">Login</a>
+                <a class="hover:underline underline-offset-6 decoration-2 decoration-red-500" href="signup.html">Sign Up</a>
             </nav>
         </header>
         <div class="flex flex-col justify-center items-center size-full bg-[#00000060]">
             <h1 class="text-4xl sm:text-5xl font-extrabold ts-text text-center max-w-[90%]">Nunca dejes de ser original</h1>
             <p class="text-xl sm:text-2xl text-center w-2/3 mt-6 ts-text">Nos encargamos de renovar tu estilo con las prendas más modernas para que brilles cada vez que salgas a la calle y te robes todas las miradas.</p>
-            <a class="inline-flex justify-center items-center text-xl mt-6 w-45 h-12 bg-indigo-600 hover:bg-indigo-700 hover:w-46 hover:h-13 transition-all duration-150 ease-linear" href="productos.html">Comprar</a>
+            <a class="inline-flex justify-center items-center text-xl mt-6 w-45 h-12 bg-indigo-600 hover:bg-indigo-700 transition-colors duration-150 ease-linear" href="productos.html">Comprar</a>
         </div>
     </section>
 
@@ -68,21 +69,21 @@
         <!--Tarjetas-->
         <div class="flex flex-wrap gap-4 justify-center md:flex-nowrap mt-10">
             <article class="bg-indigo-50 min-w-90 max-w-[90%] sm:min-w-75 sm:max-w-[45%] md:min-w-0 md:max-w-[27%] shadow-md shadow-gray-400 py-4">
-                <img class="w-[90%] mx-auto" src="img/videoframe_449853.png" alt="">
+                <img class="w-[90%] mx-auto" src="img/campera1.webp" alt="campera kevenly eleven">
                 <h3 class="w-[90%] mx-auto text-center font-bold py-2 bg-indigo-400">Campera Kevenly Eleven</h3>
-                <p class="text-center text-xl py-4">$50.000</p>
+                <p class="text-center text-xl py-4">$150.000</p>
                 <a class="w-[90%] mx-auto block text-center py-1 border-2 border-indigo-500 hover:bg-indigo-500 hover:text-white transition duration-150 ease-linear" href="">Ver producto</a>
             </article>
             <article class="bg-indigo-50 min-w-90 max-w-[90%] sm:min-w-75 sm:max-w-[45%] md:min-w-0 md:max-w-[27%] shadow-md shadow-gray-400 py-4">
-                <img class="w-[90%] mx-auto" src="img/videoframe_449853.png" alt="">
-                <h3 class="w-[90%] mx-auto text-center font-bold py-2 bg-indigo-400">Campera Kevenly Eleven</h3>
-                <p class="text-center text-xl py-4">$50.000</p>
+                <img class="w-[90%] mx-auto" src="img/campera2.webp" alt="campera kevenly rumble">
+                <h3 class="w-[90%] mx-auto text-center font-bold py-2 bg-indigo-400">Campera Kevenly Rumble</h3>
+                <p class="text-center text-xl py-4">$190.000</p>
                 <a class="w-[90%] mx-auto block text-center py-1 border-2 border-indigo-500 hover:bg-indigo-500 hover:text-white transition duration-150 ease-linear" href="">Ver producto</a>
             </article>
             <article class="bg-indigo-50 min-w-90 max-w-[90%] hidden sm:min-w-75 sm:max-w-[45%] md:min-w-0 md:max-w-[27%] md:block shadow-md shadow-gray-400 py-4">
-                <img class="w-[90%] mx-auto" src="img/videoframe_449853.png" alt="">
-                <h3 class="w-[90%] mx-auto text-center font-bold py-2 bg-indigo-400">Campera Kevenly Eleven</h3>
-                <p class="text-center text-xl py-4">$50.000</p>
+                <img class="w-[90%] mx-auto" src="img/campera3.webp" alt="campera kevenly chill">
+                <h3 class="w-[90%] mx-auto text-center font-bold py-2 bg-indigo-400">Campera Kevenly Chill</h3>
+                <p class="text-center text-xl py-4">$90.000</p>
                 <a class="w-[90%] mx-auto block text-center py-1 border-2 border-indigo-500 hover:bg-indigo-500 hover:text-white transition duration-150 ease-linear" href="">Ver producto</a>
             </article>
         </div>
@@ -100,21 +101,21 @@
         <!--Tarjetas-->
         <div class="flex flex-wrap gap-4 justify-center md:flex-nowrap mt-10">
             <article class="bg-indigo-50 min-w-90 max-w-[90%] sm:min-w-75 sm:max-w-[45%] md:min-w-0 md:max-w-[27%] shadow-md shadow-gray-400 py-4">
-                <img class="w-[90%] mx-auto" src="img/videoframe_449853.png" alt="">
-                <h3 class="w-[90%] mx-auto text-center font-bold py-2 bg-indigo-400">Campera Kevenly Eleven</h3>
-                <p class="text-center text-xl py-4">$50.000</p>
+                <img class="w-[90%] mx-auto" src="img/carpeta-oficio.webp" alt="carpetas de oficio">
+                <h3 class="w-[90%] mx-auto text-center font-bold py-2 bg-indigo-400">Carpetas Oficio</h3>
+                <p class="text-center text-xl py-4">$21.000</p>
                 <a class="w-[90%] mx-auto block text-center py-1 border-2 border-indigo-500 hover:bg-indigo-500 hover:text-white transition duration-150 ease-linear" href="">Ver producto</a>
             </article>
             <article class="bg-indigo-50 min-w-90 max-w-[90%] sm:min-w-75 sm:max-w-[45%] md:min-w-0 md:max-w-[27%] shadow-md shadow-gray-400 py-4">
-                <img class="w-[90%] mx-auto" src="img/videoframe_449853.png" alt="">
-                <h3 class="w-[90%] mx-auto text-center font-bold py-2 bg-indigo-400">Campera Kevenly Eleven</h3>
-                <p class="text-center text-xl py-4">$50.000</p>
+                <img class="w-[90%] mx-auto" src="img/fichero-020.webp" alt="fichero 020">
+                <h3 class="w-[90%] mx-auto text-center font-bold py-2 bg-indigo-400">Fichero 020</h3>
+                <p class="text-center text-xl py-4">$19.000</p>
                 <a class="w-[90%] mx-auto block text-center py-1 border-2 border-indigo-500 hover:bg-indigo-500 hover:text-white transition duration-150 ease-linear" href="">Ver producto</a>
             </article>
             <article class="bg-indigo-50 min-w-90 max-w-[90%] hidden sm:min-w-75 sm:max-w-[45%] md:min-w-0 md:max-w-[27%] md:block shadow-md shadow-gray-400 py-4">
-                <img class="w-[90%] mx-auto" src="img/videoframe_449853.png" alt="">
-                <h3 class="w-[90%] mx-auto text-center font-bold py-2 bg-indigo-400">Campera Kevenly Eleven</h3>
-                <p class="text-center text-xl py-4">$50.000</p>
+                <img class="w-[90%] mx-auto" src="img/tarjetero.webp" alt="">
+                <h3 class="w-[90%] mx-auto text-center font-bold py-2 bg-indigo-400">Tarjetero Plegable</h3>
+                <p class="text-center text-xl py-4">$12.000</p>
                 <a class="w-[90%] mx-auto block text-center py-1 border-2 border-indigo-500 hover:bg-indigo-500 hover:text-white transition duration-150 ease-linear" href="">Ver producto</a>
             </article>
         </div>
@@ -125,27 +126,27 @@
     <section class="flex flex-wrap flex-col items-center mt-15">
         <div class="w-full h-40 bg-[url(img/bg-div3.webp)] bg-cover bg-center">
             <div class="size-full  bg-[#00000050] flex justify-center items-center">
-                <h2 class="text-5xl font-bold text-center max-w-[90%] text-white ts-text">Calzados</h2>
+                <h2 class="text-5xl font-bold text-center max-w-[90%] text-white ts-text">Mochilas</h2>
             </div>
         </div>
 
         <!--Tarjetas-->
         <div class="flex flex-wrap gap-4 justify-center md:flex-nowrap mt-10">
             <article class="bg-indigo-50 min-w-90 max-w-[90%] sm:min-w-75 sm:max-w-[45%] md:min-w-0 md:max-w-[27%] shadow-md shadow-gray-400 py-4">
-                <img class="w-[90%] mx-auto" src="img/videoframe_449853.png" alt="">
-                <h3 class="w-[90%] mx-auto text-center font-bold py-2 bg-indigo-400">Campera Kevenly Eleven</h3>
+                <img class="w-[90%] mx-auto" src="img/bandolera-ines.webp" alt="bandolera ines">
+                <h3 class="w-[90%] mx-auto text-center font-bold py-2 bg-indigo-400">Bandolera Ines</h3>
                 <p class="text-center text-xl py-4">$50.000</p>
                 <a class="w-[90%] mx-auto block text-center py-1 border-2 border-indigo-500 hover:bg-indigo-500 hover:text-white transition duration-150 ease-linear" href="">Ver producto</a>
             </article>
             <article class="bg-indigo-50 min-w-90 max-w-[90%] sm:min-w-75 sm:max-w-[45%] md:min-w-0 md:max-w-[27%] shadow-md shadow-gray-400 py-4">
-                <img class="w-[90%] mx-auto" src="img/videoframe_449853.png" alt="">
-                <h3 class="w-[90%] mx-auto text-center font-bold py-2 bg-indigo-400">Campera Kevenly Eleven</h3>
-                <p class="text-center text-xl py-4">$50.000</p>
+                <img class="w-[90%] mx-auto" src="img/mochila-monster.webp" alt="mochila monster">
+                <h3 class="w-[90%] mx-auto text-center font-bold py-2 bg-indigo-400">Mochila Monster</h3>
+                <p class="text-center text-xl py-4">$55.000</p>
                 <a class="w-[90%] mx-auto block text-center py-1 border-2 border-indigo-500 hover:bg-indigo-500 hover:text-white transition duration-150 ease-linear" href="">Ver producto</a>
             </article>
             <article class="bg-indigo-50 min-w-90 max-w-[90%] hidden sm:min-w-75 sm:max-w-[45%] md:min-w-0 md:max-w-[27%] md:block shadow-md shadow-gray-400 py-4">
-                <img class="w-[90%] mx-auto" src="img/videoframe_449853.png" alt="">
-                <h3 class="w-[90%] mx-auto text-center font-bold py-2 bg-indigo-400">Campera Kevenly Eleven</h3>
+                <img class="w-[90%] mx-auto" src="img/mochila-agata.webp" alt="mochila agata">
+                <h3 class="w-[90%] mx-auto text-center font-bold py-2 bg-indigo-400">Mochila Agata</h3>
                 <p class="text-center text-xl py-4">$50.000</p>
                 <a class="w-[90%] mx-auto block text-center py-1 border-2 border-indigo-500 hover:bg-indigo-500 hover:text-white transition duration-150 ease-linear" href="">Ver producto</a>
             </article>
@@ -155,7 +156,7 @@
 
     <!--Sección de objetivos informativos y suscripción-->
     <section class="mt-15">
-        <div class="w-full h-40 bg-[url(img/bg-div3.webp)] bg-cover bg-center">
+        <div class="w-full h-40 bg-[url(img/bg-div4.webp)] bg-cover bg-center">
             <div class="size-full  bg-[#00000050] flex justify-center items-center">
                 <h2 class="text-5xl font-bold text-center max-w-[90%] text-white ts-text">Nuestro objetivo</h2>
             </div>
